--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "rivescript-rs"
 version = "0.1.0"
 edition = "2021"
+readme = "README.md"
+license = "MIT"
+description = "Implementation of a RiveScript chatbot interpreter for Rust."
+homepage = "https://www.rivescript.com"
+repository = "https://github.com/aichaos/rivescript-rs"
+keywords = ["chatbot", "rivescript"]
+categories = ["parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
