--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ path = "src/main.rs"
 log = "0.4.17"
 env_logger = "0.10.0"
 structopt = "0.3.26"
+lazy_static = "1.4.0"
+regex = "1.7.1"
+itertools = "0.10.5"
